# PetContext

./: README.md  index.html  package-lock.json  package.json  showcase.html
public/: chat.html
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: chat.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: device.rs  lib.rs  llm.rs  main.rs  report.rs  vlm.rs
src/components/: ChatArea.vue  ChatPanel.vue  DialogPanel.vue  ModelSettings.vue  SettingsModal.vue  SimpleChat.vue  TaskBreakdown.vue  TaskList.vue
src/utils/: live2d.ts  path.ts
