[package]
name = "pet-context"
version = "0.1.0"
description = "PetContext - Gamified Desktop Pet"
authors = ["PetContext Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pet_context_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
rdev = "0.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
xcap = "0.0.14"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
base64 = "0.22"
chrono = "0.4"
tauri-plugin-autostart = "2"
printpdf = "0.7"
docx-rs = "0.4"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
